--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="row align-left justify-content-center">
             <div class="col-12 col-lg-8">
                 
-                <h1 class="mbr-section-title mbr-fonts-style mb-5 pb-5 display-1"><strong>MeetingGPT: Your AI Sidekick</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mb-5 pb-5 display-1"><strong>MeetingGPT: Your AI Meeting Companion</strong></h1>
 
                 <p class="mbr-text mbr-fonts-style mb-5 pt-5 mt-5 display-7">Stop scribbling notes. Let AI do the heavy lifting so you can focus on the conversation.</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="#">Get Started</a></div>
